src/main/java/com/example/cotacao/errors/ProductNotFoundError.java
package com.example.cotacao.errors;

public class ProductNotFoundError extends BusinessError{

    public ProductNotFoundError() {
        super("Produto não encontrado.");
    }
    
}
